[gd_scene load_steps=12 format=2]

[ext_resource path="res://objects/backgrounds/Moving_Starfield.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/graphics/title.png" type="Texture" id=2]
[ext_resource path="res://assets/images/graphics/settings_button.png" type="Texture" id=3]
[ext_resource path="res://assets/images/graphics/start_button.png" type="Texture" id=4]
[ext_resource path="res://levels/start_screen.gd" type="Script" id=5]
[ext_resource path="res://assets/images/graphics/selector.png" type="Texture" id=6]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.609576, 0.1, 1.17573, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "hue rotation"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.6, 0.85, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.2, 0.1, 0.1, 1 ), Color( 1.15, 1.15, 0.1, 1 ), Color( 0.290501, 1.19093, 0.1, 1 ), Color( 0.1, 1.15, 1.15, 1 ), Color( 0.1, 0.1, 1.2, 1 ), Color( 0.609576, 0.1, 1.17573, 1 ), Color( 1.1, 0.1, 0.1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("selector:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.6, 0.85, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.2, 0.1, 0.1, 1 ), Color( 1.15, 1.15, 0.1, 1 ), Color( 0.290501, 1.19093, 0.1, 1 ), Color( 0.1, 1.15, 1.15, 1 ), Color( 0.1, 0.1, 1.2, 1 ), Color( 0.609576, 0.1, 1.17573, 1 ), Color( 1.1, 0.1, 0.1, 1 ) ]
}

[sub_resource type="Environment" id=2]
background_mode = 4
fog_color = Color( 0.501961, 0.6, 0.701961, 1 )
fog_sun_color = Color( 1, 1, 1, 1 )
fog_sun_amount = 1.0
fog_height_enabled = true
glow_enabled = true
glow_strength = 0.95
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=4]
Button/styles/focus = SubResource( 5 )

[node name="start_screen" type="Node2D"]
script = ExtResource( 5 )

[node name="Moving_Starfield" parent="." instance=ExtResource( 1 )]

[node name="selector" type="Sprite" parent="."]
modulate = Color( 1.16781, 0.775991, 0.1, 1 )
position = Vector2( 0, 126 )
texture = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.609576, 0.1, 1.17573, 1 )
position = Vector2( 0, -140 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hue rotation"
playback_speed = 0.7
anims/RESET = SubResource( 3 )
"anims/hue rotation" = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -106.0
margin_top = 100.0
margin_right = 106.0
margin_bottom = 204.0
theme = SubResource( 4 )

[node name="start_button" type="Button" parent="VBoxContainer"]
margin_right = 212.0
margin_bottom = 50.0
focus_neighbour_left = NodePath("../settings_button")
focus_neighbour_top = NodePath("../settings_button")
focus_neighbour_right = NodePath("../settings_button")
focus_neighbour_bottom = NodePath("../settings_button")
focus_next = NodePath("../settings_button")
focus_previous = NodePath("../settings_button")
shortcut_in_tooltip = false
icon = ExtResource( 4 )
flat = true

[node name="settings_button" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 212.0
margin_bottom = 104.0
focus_neighbour_left = NodePath("../start_button")
focus_neighbour_top = NodePath("../start_button")
focus_neighbour_right = NodePath("../start_button")
focus_neighbour_bottom = NodePath("../start_button")
focus_next = NodePath("../start_button")
focus_previous = NodePath("../start_button")
shortcut_in_tooltip = false
icon = ExtResource( 3 )
flat = true

[node name="start_button_position" type="Node2D" parent="."]
position = Vector2( 0, 125 )

[node name="settings_button_position" type="Node2D" parent="."]
position = Vector2( 0, 182 )

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
